--- a/math154/calculus3_lagrange_multipliers.html
+++ b/math154/calculus3_lagrange_multipliers.html
@@ -121,6 +121,7 @@ ptype = selector(['jet','hsv','rainbow','Greys','GnBu', 'PuBu', 'YlGnBu'],button
     </ol>
 </div>
 
+<P> Review question: When should we use the method of Lagrange multipliers to find max/mins for a constrained optimization problem, and when should we use the method of checking crtical points and boundaries?
 
 <br>
 <br>
