--- a/math154/calculus3_polar_integrals.html
+++ b/math154/calculus3_polar_integrals.html
@@ -78,8 +78,8 @@
         <ol type='1'>
           <li> \(\displaystyle \int_{0}^{3} \int_{-\sqrt{9-x^2}}^{0}1~dy~dx \)
           <li> \(\displaystyle \int_{-3}^{3} \int_0^{\sqrt{9-x^2}}1~dy~dx \)
-          <li> \(\displaystyle \int_{-3}^{3} \int_0^{\sqrt{9-x^2}}1~dx~dy \)
-          <li> \(\displaystyle \int_{-3}^{0} \int_{-\sqrt{9-x^2}}^{\sqrt{9-x^2}}1~dx~dy \)
+          <li> \(\displaystyle \int_{-3}^{3} \int_0^{\sqrt{9-y^2}}1~dx~dy \)
+          <li> \(\displaystyle \int_{-3}^{0} \int_{-\sqrt{9-y^2}}^{\sqrt{9-y^2}}1~dx~dy \)
           </ol>
           <P>(No calculation) What is the value of \(\displaystyle \int_{0}^{3} \int_{\pi}^{2\pi} r~d\theta~dr \)?
         </div><br>
