--- a/math154/calculus3_linear_regression.html
+++ b/math154/calculus3_linear_regression.html
@@ -180,7 +180,8 @@ Use one of these to verify your parameter calculations using the formulas above.
   <div id="excelml1" class="collapse">
     <a href="https://support.microsoft.com/en-us/office/load-the-analysis-toolpak-in-excel-6a63e598-cd6d-42e3-9317-6b40ba1a66b4">Get Data Analysis Toolpak for MS Excel</a><br><br>
     To do multiple linear regression in MS Excel, we first create a new column, or columns, associated with the terms in our proposed formula. In the example below
-    we are fitting the data to a form \(z = ax + by + cxy\) so we need columns for x,y,xy, and z. We have x,y, and z from the data given so we only need a new column for xy.
+    we are fitting the data to a form \(z = ax + by + cxy\) so we need columns for x,y,xy, and z.
+    We have x,y, and z from the data given so we only need a new column for xy. Excel will calculate the coefficients \(a, b\), and \(c\) in these terms for us.
     Then we want to use the regression module of the Data Analysis Toolpak. This is in the Data tab.
     <br><img src="./linreg_excel3.png" width=500><br>
     <br><img src="./linreg_excel4.png" width=500><br>
