--- a/math154/calculus3_linear_regression.html
+++ b/math154/calculus3_linear_regression.html
@@ -187,7 +187,7 @@ Use one of these to verify your parameter calculations using the formulas above.
     <br><img src="./linreg_excel4.png" width=500><br>
     Once in the Regression form, the "Y-data" is our dependent/response data (z in this case) and the "X-data" is the independent/explanatory data (the x,y, and xy columns).
     I like to make sure to include the column header and click the Label checkbox for ease in reading the results.
-    Note we can set the intercept to be zero by checking the appropriate box as well.
+    Note we can set the intercept to be zero by checking the appropriate box as well. If we had wanted a constant term in our fit, we would not check this.
     <br><img src="./linreg_excel5.png" width=500><br>
     We can then read the regression results off the new worksheet.
     <br><img src="./linreg_excel6.png" width=500><br>
