--- a/math154/calculus3_cylindrical_spherical_integrals.html
+++ b/math154/calculus3_cylindrical_spherical_integrals.html
@@ -34,6 +34,7 @@
       <ol type='1'>
         <li>What are the transformation equations between rectangular and cylindrical coordinates?
         <li>What are the transformation equations between rectangular and spherical coordinates?
+        <li>What is \(dV\) in spherical coordinates?<details><summary>-</summary> <img src="./dV_spherical.png" width=400></details>
         </ol>
 
 </div>
@@ -151,6 +152,7 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
         <li>What does \(\phi=\pi/2\) look like in spherical coordinates?<br>
         <li>Find the spherical coordinates for the point \((2,\frac{\sqrt{3}}{2},\frac{1}{2})\) in rectangular coordinates.<br>
         <li>Find the cylindrical coordinates for the point above. (Assume along z-axis.)
+
         </ol>
 </div>
 
