--- a/math154/calculus3_cylindrical_spherical_integrals.html
+++ b/math154/calculus3_cylindrical_spherical_integrals.html
@@ -129,6 +129,7 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
 
 
 
+
 <h2>Example - Sphere</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#examplesph">Example</button>
   <div id="examplesph" class="collapse">
@@ -173,14 +174,24 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
 <h2>Example - More integrals </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#examplesc">Example</button>
   <div id="examplesc" class="collapse">
+    <P>Which integral below evaluates easily? Why?
+      Confirm your answer by performing the calculation and do the calculation for the other integral.<br><br>
       <ol type='A'>
-        <li>Which integral below evaluates easily? Why? Confirm your answer by performing the calculation and do the calculation for the other integral.<br><br>
-        <li>Evaluate \(\displaystyle \iiint_T \sqrt{x^2 + y^2}~dV\), where \(T\) is the region in the bounded by \(x^2 + y^2 = 1\) and \(z=1\) and \(z=3\).<br><br>
+        <li>Evaluate \(\displaystyle \iiint_T \sqrt{x^2 + y^2}~dV\), where \(T\) is the region bounded by \(x^2 + y^2 = 1\) and \(z=1\) and \(z=3\).<br><br>
         <li>Evaluate \(\displaystyle \iiint_T y~dV\), where \(T\) is the region bounded by the \(xy\) plane and \(z = \sqrt{1- x^2 - y^2}\).
         </ol>
 </div>
 
 
+<!--
+<h2>Example - WW   </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">WW Example</button>
+<div id="ex9" class="collapse">
+<iframe width="800" height="800" src="https://demo.webwork.rochester.edu/webwork2/html2xml?&answersSubmitted=0&sourceFilePath=Library/Rochester/setVMultIntegrals2Polar/UR_VC_9_2.pg&problemSeed=1234&courseID=daemon_course&userID=daemon&course_password=daemon&showSummary=1&displayMode=MathJax&problemIdentifierPrefix=102&language=en&outputformat=sticky"></iframe>
+<br>
+<iframe width="800" height="800" src="https://demo.webwork.rochester.edu/webwork2/html2xml?&answersSubmitted=0&sourceFilePath=Library/Rochester/setVMultIntegrals5Triple/ur_vc_10_11.pg&problemSeed=1234&courseID=daemon_course&userID=daemon&course_password=daemon&showSummary=1&displayMode=MathJax&problemIdentifierPrefix=102&language=en&outputformat=sticky"></iframe>
+</div>
+-->
 
 <br>
 
