--- a/math154/calculus3_centers_of_mass_3d.html
+++ b/math154/calculus3_centers_of_mass_3d.html
@@ -84,6 +84,13 @@
           -->
 </div>
 
+<h2>Example - average value</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex00">Example</button>
+  <div id="ex00" class="collapse">
+      <P> What is the average value of \(f(x,y,z) = x\) over the region \(D\) where \(D\) is the portion of the unit sphere in the first octant?
+
+</div>
+
 
 <h2>Example - doorstop</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example">Example</button>
