--- a/math154/calculus3_centers_of_mass_3d.html
+++ b/math154/calculus3_centers_of_mass_3d.html
@@ -125,8 +125,8 @@
         <li>\(I_z = \iiint_Q (x^2 + y^2) \, \rho (x,y,z) \, dV\)<br>
       </ul>
       <ol>
-        <li>Find the moments of intertia about each coordinate axis for the box of constant density, \(k\), with length, width, and height \(a,b,c\) in the \(x,y,z\) directions, respectively.
-        <li>The radius of gyration (kind of like a rotational center of mass) is given by \(\displaystyle R = \sqrt{\frac{I}{m}} \). Find \(R_x\) for the above box.
+        <li>Find the moments of inertia about each coordinate axis for the box of constant density, \(k\), with length, width, and height \(a,b,c\) in the \(x,y,z\) directions, respectively.
+        <li>The radius of gyration (kind of like a rotational center of mass) is given by \(\displaystyle R_i = \sqrt{\frac{I_i}{m}} \). Find \(R_x\) for the above box.
       </ol>
 
 
