--- a/math154/calculus3_centers_of_mass_3d.html
+++ b/math154/calculus3_centers_of_mass_3d.html
@@ -33,9 +33,9 @@
   <div id="wu" class="collapse">
     <P>Explain each formula below.
       <ol type='1'>
-        <li>\(\bar{x} = \frac{\iint_R x\rho (x,y,z)~dV}{\iint_R \rho (x,y,z)~dV} \)<br><br>
-        <li>\(\bar{y} = \frac{\iint_R y\rho (x,y,z)~dV}{\iint_R \rho (x,y,z)~dV} \)<br><br>
-        <li>\(\bar{z} = \frac{\iint_R z\rho (x,y,z)~dV}{\iint_R \rho (x,y,z)~dV} \)<br><br>
+        <li>\(\bar{x} = \frac{\iiint_R x\rho (x,y,z)~dV}{\iiint_R \rho (x,y,z)~dV} \)<br><br>
+        <li>\(\bar{y} = \frac{\iiint_R y\rho (x,y,z)~dV}{\iiint_R \rho (x,y,z)~dV} \)<br><br>
+        <li>\(\bar{z} = \frac{\iiint_R z\rho (x,y,z)~dV}{\iiint_R \rho (x,y,z)~dV} \)<br><br>
         </ol>
 
 </div>
