--- a/math154/M158Exam2review_Fall2021.html
+++ b/math154/M158Exam2review_Fall2021.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width:750px; padding-left: 1cm" background="bg.jpg">
+  <body style="width:750px; padding-left: 1cm; padding-bottom:10cm" >
 
   <h1>Math 158 Exam 2 Review Fall 2021</h1>
 
@@ -53,6 +53,6 @@
 <br>
 <br>
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
