--- a/math154/calculus3_vvf.html
+++ b/math154/calculus3_vvf.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML> 
+<!DOCTYPE HTML>
 <html>
   <head>
     <script type="text/javascript" async
@@ -26,6 +26,29 @@ $(function () {
 
 <hr>
 
+<h2>Warmups  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#warmups">Warmups</button>
+  <div id="warmups" class="collapse">
+    <details>
+      <summary>Question 1</summary>
+      <img src="./vvf_mc1.png" width=450>
+    </details>
+    <details>
+      <summary>Question 2</summary>
+      <img src="./vvf_mc2.png" width=450>
+    </details>
+  </div>
+
+
+  <h2>Example - Unit tangent vector </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Example</button>
+    <div id="ex0" class="collapse">
+      <ol>
+        <li> Find the unit tangent vector to the curve \( \vec{r}(t) = \begin{bmatrix}1 + \cos(t)\\ 2- \sin(6t) \end{bmatrix}\) when \(t=\pi/6\).
+      </ol>
+   </div>
+
+
 <h2>Example -  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex000">Example</button>
   <div id="ex000" class="collapse">
@@ -38,13 +61,7 @@ $(function () {
     </ol>
  </div>
 
-<h2>Example - Unit tangent vector </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Example</button>
-  <div id="ex0" class="collapse">
-    <ol>
-      <li> Find the unit tangent vector to the curve \( \vec{r}(t) = \begin{bmatrix}1 + \cos(t)\\ 2- \sin(6t) \end{bmatrix}\) when \(t=\pi/6\).
-    </ol>
- </div>
+
 
  <h2>Example -  </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex00">Example</button>
@@ -80,6 +97,17 @@ $(function () {
 <h2>Example - circular motion</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">
+
+    <details>
+      <summary>Voting Question 1</summary>
+      <img src="./vvf_mc3.png" width=450>
+    </details>
+    <details>
+      <summary>Voting Question 2</summary>
+      <img src="./vvf_mc4.png" width=450>
+    </details>
+    <details>
+      <summary>More questions</summary>
     <P>An object moves on a circular path given by<br><br>
       \( \displaystyle \vec{r}(t) = a \cos (\omega t) \hat{x} + a \sin (\omega t) \hat{y},\) <br><br>
       where \(\omega = \frac{d\theta}{dt}\) is angular velocity.
@@ -88,6 +116,7 @@ $(function () {
         <li>Show the acceleration always points inward.
         <li>True or False. The speed of the object is constant.
         </ol>
+      </details>
 </div>
 
 <h2>Example 2 - spacecraft </h2>
