--- a/math154/calculus3_vvf.html
+++ b/math154/calculus3_vvf.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 800px; padding-left: 1cm" background="bg.jpg">
+  <body style="width:750px; padding-left: 1cm; padding-bottom:10cm" >
 
   <h1>Vector valued functions</h1>
 
@@ -175,5 +175,6 @@ def _(v0=slider(1.,50.0,0.1,10.)):
     </div>
 </div>
 
+  <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
