--- a/math154/calculus3_vvf_normals.html
+++ b/math154/calculus3_vvf_normals.html
@@ -61,9 +61,9 @@ $(function () {
     <P>Consider the curve given by \(\displaystyle \vec{r}(t) = \begin{bmatrix}2\sin(t)\\5t\\2\cos(t)\end{bmatrix}\).
       <ol>
         <li>Draw a picture of this curve and describe it.
-        <li>Calculate the unit tangent vector at time \(t)\).
-        <li>Calculate the unit normal vector at time \(t)\).
-        <li>Calculate the curvature at time \(t)\).
+        <li>Calculate the unit tangent vector at time \(t\).
+        <li>Calculate the unit normal vector at time \(t\).
+        <li>Calculate the curvature at time \(t\).
         <li>Make sure you can interpret and explain your results geometrically.
         </ol>
 </div>
@@ -95,7 +95,7 @@ $(function () {
     must be matched by the lateral component of the normal force from the floor of the train.
     The train's speed \(v\) must remain constant at all times.
 
-    <P>In order to determine the banking angle, \(\theta\), consider the plane normal to $\vec{r}'(s)$ for each \(s\).
+    <P>In order to determine the banking angle, \(\theta\), consider the plane normal to \(\vec{r}'(s)\) for each \(s\).
       We can create local coordinate unit vectors \(\vec{u}\) (horizontal) and \(\vec{w}\) (vertical).
       Each passenger car experiences a gravitational force \(\vec{F}_g = -mg \vec{w}\).
       The normal force vector  \(\vec{F}_n\) from the track onto the passenger car vector balances \(\vec{F}_g\)
