--- a/math154/calculus3_vvf_arclength_curvature.html
+++ b/math154/calculus3_vvf_arclength_curvature.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px; padding-left: 1cm" background="bg.jpg">
+  <body style="width: 1000px; padding-left: 1cm" background="">
 
   <h1>Vector valued functions</h1>
 
