--- a/math154/calculus3_vvf_arclength_curvature.html
+++ b/math154/calculus3_vvf_arclength_curvature.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px; padding-left: 1cm" background="">
+  <body style="width: 700px; padding-left: 1cm" background="">
 
   <h1>Vector valued functions</h1>
 
@@ -127,8 +127,8 @@ a straight line in 3-space?
           <li>Now since \( |\vec{T}| = 1 \) (constant) we know \(\vec{T} \perp \vec{T}'\) so \( \vec{T} \times \vec{T}' = |\vec{T}| |\vec{T}'|\).<br><br>
           <li>Putting everything together we can get our result:<br><br>
             \(\displaystyle |\vec{r}' \times \vec{r}'' | = \left(\frac{ds}{dt}\right)^2 |\vec{T}'| \)<br><br>
-            \(\displaystyle |\vec{T}'| = \frac{|\vec{r}' \times \vec{r}'' |}{\vec{r}'|^2}\)<br><br><br>
-            \(\displaystyle \kappa = \frac{| \vec{T}' |}{|\vec{r}'|} = \frac{|\vec{r}' \times \vec{r}'' |}{\vec{r}'|^3}\)
+            \(\displaystyle |\vec{T}'| = \frac{|\vec{r}' \times \vec{r}'' |}{|\vec{r}'|^2}\)<br><br><br>
+            \(\displaystyle \kappa = \frac{| \vec{T}' |}{|\vec{r}'|} = \frac{|\vec{r}' \times \vec{r}'' |}{|\vec{r}'|^3}\)
 
           </ul>
 </div>
@@ -180,6 +180,6 @@ a straight line in 3-space?
 
 
 
-<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
+<footer style="text-align: center; padding-top: 2cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
