--- a/math154/calculus3_vvf_arclength_curvature.html
+++ b/math154/calculus3_vvf_arclength_curvature.html
@@ -124,7 +124,7 @@ a straight line in 3-space?
             \(\displaystyle \vec{r}' \times \vec{r}'' = (\vec{r}' \times \frac{d^2s}{dt^2}\vec{T}) + (\vec{r}' \times \frac{ds}{dt}\vec{T}') \) <br><br>
           <li>Note that the first term is zero (why?) and \(\displaystyle \vec{r}' = \frac{ds}{dt}\vec{T}\) so <br><br>
           \(\displaystyle \vec{r}' \times \vec{r}'' = \left(\frac{ds}{dt}\right)^2 \left( \vec{T} \times \vec{T}' \right) \).<br><br>
-          <li>Now since \( |\vec{T}| = 1 \) (constant) we know \(\vec{T} \perp \vec{T}'\) so \( \vec{T} \times \vec{T}' = |\vec{T}| |\vec{T}'|\).<br><br>
+          <li>Now since \( |\vec{T}| = 1 \) (constant) we know \(\vec{T} \perp \vec{T}'\) so \( |\vec{T} \times \vec{T}'| = |\vec{T}| |\vec{T}'|\).<br><br>
           <li>Putting everything together we can get our result:<br><br>
             \(\displaystyle |\vec{r}' \times \vec{r}'' | = \left(\frac{ds}{dt}\right)^2 |\vec{T}'| \)<br><br>
             \(\displaystyle |\vec{T}'| = \frac{|\vec{r}' \times \vec{r}'' |}{|\vec{r}'|^2}\)<br><br><br>
