--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -51,9 +51,9 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf_arclength_curvature.html">vvf - arc length and curvature</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf_normals.html">vvf - normals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf_kepler.html">vvf - Kepler's Laws</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/vector_fields.html">vector fields</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/conservative_fields_greens_thm.html">conservative fields and Green's theorem</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/div_curl.html">divergence and curl</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vector_fields.html">vector fields</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_conservative_fields_greens_thm.html">conservative fields and Green's theorem</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_div_curl.html">divergence and curl</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/MV_FTOC.html">fundamental theorems of calculus</a>
 
 </ul>
