--- a/math154/calculus3_vector_fields.html
+++ b/math154/calculus3_vector_fields.html
@@ -194,6 +194,15 @@ def _(funx=input_box(funx,label="f =  "),funy=input_box(funy,label="g =  "),
 -->
 </div>
 
+<h2>True/False</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exampletf">Example</button>
+<div id="exampletf" class="collapse">
+<ol type='A'>
+  <li>If \(\vec{r}(t)\) is a flow line for a vector field \(\vec{F}\) , then \(\vec{r}_1(t) = 2\vec{r}(t)\) is a flow line of the vector field \(2\vec{F}\).<br>
+  <li>True or False. If one parameterization of a curve is a flow line for a vector field, then all its parameterizations are flow lines for the vector field.<br>
+  </ol>
+</div>
+
 
 
 
