--- a/math154/calculus3_conservative_fields_greens_thm.html
+++ b/math154/calculus3_conservative_fields_greens_thm.html
@@ -67,7 +67,7 @@ statements are true for any vector field \(\vec{F}\)? <br>
   </ol>
   </div>
 
-<!--<h2>Voting questions - </h2>
+-<h2>Voting questions - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Voting</button>
   <div id="ex0" class="collapse">
 
@@ -75,18 +75,14 @@ statements are true for any vector field \(\vec{F}\)? <br>
           <div id="vq1" class="collapse">
 
 
-        <P> Which of the following is equivalent to the integral \(\displaystyle \int_{-5}^5 \int_0^3 \int_{-\sqrt{25-x^2}}^{\sqrt{25-x^2}} x~dy~dz~dx\)?
-          <ol type='1'>
-            <li> \(\displaystyle \int_0^3 \int_0^3 \int_0^{\pi} r^2 \cos \theta~d\theta~dz~dr\)<br>
-            <li> \(\displaystyle \int_0^5 \int_0^3 \int_0^{\pi} r^2 \cos \theta~d\theta~dz~dr\)<br>
-            <li> \(\displaystyle \int_0^3 \int_0^5 \int_0^{2\pi} r \cos \theta~d\theta~dz~dr\)<br>
-            <li> \(\displaystyle \int_0^5 \int_0^3 \int_0^{2\pi} r^2 \cos \theta~d\theta~dz~dr\)<br>
-            <li> none of the above
-            </ol>
+        <P> If the path C is a circle centered at the origin, oriented clockwise, which of the vector
+fields below has a positive circulation?
+          <br><img src="./vq_circulation_fields.png" width=600>
 
           </div><br>
 
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vq2">Question 2</button>
+
+          <!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vq2">Question 2</button>
             <div id="vq2" class="collapse">
 
 
@@ -107,8 +103,8 @@ statements are true for any vector field \(\vec{F}\)? <br>
             <div id="vq4" class="collapse">
           <img src="polar_int_unit_circle_voting.png" width=400><br>
             </div>
-
-</div>-->
+-->
+</div>
 
 
 <h2>Example - </h2>
