--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -52,10 +52,11 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf_normals.html">vvf - normals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf_kepler.html">vvf - Kepler's Laws</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vector_fields.html">vector fields</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_line_integrals_path_independence.html">line integrals and path independence</a> 
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_line_integrals_path_independence.html">line integrals and path independence</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_conservative_fields_greens_thm.html">conservative fields and Green's theorem</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_div_curl.html">divergence and curl</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/MV_FTOC.html">fundamental theorems of calculus</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_flux_integrals.html">Surface integrals and flux</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_MV_FTOC.html">Fundamental Theorems of Calculus</a>
 
 </ul>
 
