--- a/math154/calculus3_line_integrals_path_independence.html
+++ b/math154/calculus3_line_integrals_path_independence.html
@@ -173,6 +173,12 @@ Need to cover - sketching; recognizing fields/flow lines; gradient fields; poten
     </ol>
   </div>
 
+
+  <h2>Example - half circle</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#examplehcir">Example</button>
+    <div id="examplehcir" class="collapse">
+      <P>Evaluate the line integral \(\displaystyle \int_C 2xy^2~ds\) where \(C\) is the right half of the circle \(\displaystyle x^2 +y^2 = 25\) and \(s\) is arc length.
+  </div>
 <br>
 
 <footer style="text-align: center; padding-top: 5cm;">copyright Tyler Skorczewski 2021</footer>
