--- a/math154/calculus3_line_integrals_path_independence.html
+++ b/math154/calculus3_line_integrals_path_independence.html
@@ -165,9 +165,9 @@ Need to cover - sketching; recognizing fields/flow lines; gradient fields; poten
         </ol></details>
     <li><details><summary>Question set 3</summary>
       <ol>
-      <li>Consider the path \(C_1\) parameterized by \(\vec{r}_1(t) = \cos t\hat{x} + \sin t \hat{y}, 0 \leq t \leq 2\pi\), and \(C_2\) parameterized by \(\vec{r}_2(t) = 2\cos t\hat{x} + 2\sin t \hat{y}, 0 \leq t \leq 2\pi\)\). Let \(\vec{F}\) be a vector field. True or False:
+      <li>Consider the path \(C_1\) parameterized by \(\vec{r}_1(t) = \cos t\hat{x} + \sin t \hat{y}, 0 \leq t \leq 2\pi\), and \(C_2\) parameterized by \(\vec{r}_2(t) = 2\cos t\hat{x} + 2\sin t \hat{y}, 0 \leq t \leq 2\pi\). Let \(\vec{F}\) be any vector field. True or False:
         \(\displaystyle \int_{C_2} \vec{F}\cdot d\vec{r} = 2 \int_{C_1} \vec{F}\cdot d\vec{r} \).<br><br>
-      <li>Consider the path \(C_1\) parameterized by \(\vec{r}_1(t) = \cos t\hat{x} + \sin t \hat{y}, 0 \leq t \leq 2\pi\), and \(C_2\) parameterized by \(\vec{r}_2(t) = \cos (2t) \hat{x} + \sin (2t) \hat{y}, 0 \leq t \leq 2\pi\). Let \(\vec{F}\) be a vector field. True or False:
+      <li>Consider the path \(C_1\) parameterized by \(\vec{r}_1(t) = \cos t\hat{x} + \sin t \hat{y}, 0 \leq t \leq 2\pi\), and \(C_2\) parameterized by \(\vec{r}_2(t) = \cos (2t) \hat{x} + \sin (2t) \hat{y}, 0 \leq t \leq 2\pi\). Let \(\vec{F}\) be any vector field. True or False:
         \(\displaystyle \int_{C_2} \vec{F}\cdot d\vec{r} = 2 \int_{C_1} \vec{F}\cdot d\vec{r} \).
       </ol></details>
     </ol>
